--- a/application/views/app/produtos/adicionar.twig
+++ b/application/views/app/produtos/adicionar.twig
@@ -55,7 +55,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="nome" class="col-sm-2 control-label">Nome</label>
+                            <label for="nome" class="col-sm-2 control-label">Produto</label>
 
                             <div class="col-sm-5">
                                 <input type="text" class="form-control" id="nome" name="nome" placeholder="" required>
