--- a/application/views/app/produtos/index.twig
+++ b/application/views/app/produtos/index.twig
@@ -50,7 +50,7 @@
                         <thead>
                             <tr>
                                 <th>Fornecedor</th>
-                                <th>Nome</th>
+                                <th>Produto</th>
                                 <th>Unidade</th>
                                 <th>Preço venda</th>
                                 <th>Preço compra</th>
