--- a/application/views/app/produtos/editar.twig
+++ b/application/views/app/produtos/editar.twig
@@ -56,7 +56,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="nome" class="col-sm-2 control-label">Nome</label>
+                            <label for="nome" class="col-sm-2 control-label">Produto</label>
 
                             <div class="col-sm-5">
                                 <input type="text" class="form-control" id="nome" name="nome" placeholder="" value="{{ produto.nome }}">
