--- a/application/views/app/ordens_de_servico/editar.twig
+++ b/application/views/app/ordens_de_servico/editar.twig
@@ -84,7 +84,7 @@
                         <label for="valorPecas" class="col-sm-2 control-label">Valor das Peças usadas</label>
 
                         <div class="col-sm-5">
-                            <input type="text" class="form-control" id="valorTotal" placeholder="" value="{{ ordem.valorPecas }}" readonly>
+                            <input type="text" class="form-control" id="valorTotal" placeholder="" value="{{ ordem.valorPecasFormatado }}" readonly>
                         </div>
                     </div>
 
