--- a/application/views/app/produtos/editar.twig
+++ b/application/views/app/produtos/editar.twig
@@ -83,7 +83,7 @@
                             <label for="precoVenda" class="col-sm-2 control-label">Preço de Venda</label>
 
                             <div class="col-sm-2">
-                                <input type="text" class="form-control" id="precoVenda" name="precoVenda" value="{{ produto.precoVenda }}">
+                                <input type="text" class="form-control" id="precoVenda" name="precoVenda" value="{{ produto.precoVendaFormatado }}">
                             </div>
                         </div>
 
@@ -91,7 +91,7 @@
                             <label for="precoCompra" class="col-sm-2 control-label">Preço de compra</label>
 
                             <div class="col-sm-2">
-                                <input type="text" class="form-control" id="precoCompra" name="precoCompra" value="{{ produto.precoCompra }}">
+                                <input type="text" class="form-control" id="precoCompra" name="precoCompra" value="{{ produto.precoCompraFormatado }}">
                             </div>
                         </div>
                         
