--- a/application/views/app/produtos/index.twig
+++ b/application/views/app/produtos/index.twig
@@ -64,8 +64,8 @@
                                     <td>{{ produto.fornecedor.nome }}</td>
                                     <td>{{ produto.nome }}</td>
                                     <td>{{ produto.unidade }}</td>
-                                    <td>R$ {{ produto.precoVenda }}</td>
-                                    <td>R$ {{ produto.precoCompra }}</td>
+                                    <td>R$ {{ produto.precoVendaFormatado }}</td>
+                                    <td>R$ {{ produto.precoCompraFormatado }}</td>
                                     <td>{{ produto.estoque }}</td>
                                     <td class="text-right">
                                         <div class="btn-group" role="group" aria-label="...">
