--- a/application/views/layouts/base.twig
+++ b/application/views/layouts/base.twig
@@ -12,6 +12,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
         {% include "layouts/includes/assets_header.twig" %}
+
+        <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
     <!--
     BODY TAG OPTIONS:
