--- a/application/views/app/ordens_de_servico/email.twig
+++ b/application/views/app/ordens_de_servico/email.twig
@@ -2,8 +2,8 @@
 
 {% block content_header %}
     <h1>
-        Produtos
-        <small>Cadastro de nova ordem de serviço</small>
+        Email
+        <small>Envio de email para cliente</small>
     </h1>
     <ol class="breadcrumb">
         <li><a href="/"><i class="fa fa-dashboard"></i> Início </a></li>
@@ -35,7 +35,7 @@
         <div class="col-md-12 col-lg-12">
             <div class="box box-info">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Formulário de cadastro de Produtos</h3>
+                    <h3 class="box-title">Email</h3>
                 </div>
                 <!-- /.box-header -->
                 <!-- form start -->
