alterações rapidas em javascripts

--- a/application/views/app/ordens_de_servico/email.twig
+++ b/application/views/app/ordens_de_servico/email.twig
@@ -89,7 +89,7 @@
                         <div class="col-sm-offset-2">
                             <button type="button"
                                     class="btn btn-danger"
-                                    onclick="window.location.href='/produtos'">
+                                    onclick="window.history.back();">
                                 <i class="fa fa-fw fa-arrow-left">&nbsp;</i>
                                 Voltar
                             </button>
